tests/neg-custom-args/captures/class-uses.check
-- Error: tests/neg-custom-args/captures/class-uses.scala:17:22 --------------------------------------------------------
17 |      Console.println(g.toString) // error
   |                      ^
   |                      reference `A.this.g` is not included in the allowed capture set {A.this.f}
   |                      of the enclosing class B in class A
-- Error: tests/neg-custom-args/captures/class-uses.scala:21:22 --------------------------------------------------------
21 |      Console.println(f.toString) // error
   |                      ^
   |                      reference `A.this.f` is not included in the allowed capture set {}
   |                      of the enclosing class C in class A
